/*
 * $Id: ChangeLog,v 1.1206 2013-12-24 18:54:45 guerra000 Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2013-12-24 12:52 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
   * source/winprint.prg
     + NO_GUI macro checking added.
       It allows to compile HBPRINTER library for console mode.
       Fully functional but no preview.

2013-12-23 12:23 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
   * source/h_pdf.prg
     ! Fixed error when page contains an image but no text.
     ! Fixed default value for nBitsPerSample in ::TIFFInfo()
       to 1.
     ! Minor corrections to variable initializations.
     ! Really minimal source code alignment.
     ! Added missing TIFF and JPEG extension validation
       (from only TIF and JPG).
     ! Few ::aReport[] items converted to object's properties
       (HANDLE, DOCLEN).
     ! ::WriteToFile() method added.

2013-12-10 12:34 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
   * samples/oohg/oohgrecord/px.prg
     ! Fixed Harbour compatibility. Thanks to MigSoft.

2013-12-07 10:37 UTC-0200 Fernando Yurisich <fyurisich@oohg.org>
   * source/h_grid.prg
     - Workarounds in PRG code for ListView_GetSubitemRect returning
       wrong left and/or width values for first column.
     % Method ScrollToCol.
     + Test for vertical scrollbar presence in method Value.
     % Function _GetGridCellData.
     + Workaround to function ListView_GetSubitemRect at C level,
       so it always returns the correct left and width values for
       first column.
     ! First displayed column is erased after moving first defined
       column to another position in a Grid with PAINTLEFTMARGIN
       clause.

2013-12-02 21:05 UTC-0200 Fernando Yurisich <fyurisich@oohg.org>
   * ./ChangeLog
     * Previous entry amended.

2013-12-02 21:00 UTC-0200 Fernando Yurisich <fyurisich@oohg.org>